--- a/public/style.css
+++ b/public/style.css
@@ -7,9 +7,13 @@ body {
     margin: 0;
 }
 .cabecera {
+    text-align: center;
     width: 100%;
-    height: 102px;
+    height: 110px;
     background: white;
+    font-family: 'Segoe UI';
+    font-size: 25pt;
+    color: #707070;
 }
 .nav-text {
     color: black;
