--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,7 @@ body {
     background:url("./img/Fondo-de-verano.jpg") no-repeat top;
     margin: 0;
 }
-.cabecera {
+.cabecera, .cabecera label {
     text-align: center;
     width: 100%;
     height: 110px;
